// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`createArticleShareBubble() should uri size less then 1000 1`] = `"line://msg/text/?Please%20help%20me%20verify%20if%20this%20is%20true%3A%20https%3A%2F%2Fcofacts.hacktabl.org%2Farticle%2FAWDZYXxAyCdS-nWhumlz"`;

exports[`createArticleShareBubble() should uri size less then 1000 2`] = `"https://www.facebook.com/dialog/share?openExternalBrowser=1&app_id=719656818195367&display=popup&hashtag=%23ReportedToCofacts&href=https%3A%2F%2Fcofacts.hacktabl.org%2Farticle%2FAWDZYXxAyCdS-nWhumlz"`;

exports[`createFeedbackWords() should create both feedback words 1`] = `
"👍 1 user considers this helpful
😕 2 users consider this not useful"
`;

exports[`createFeedbackWords() should create empty feedback words 1`] = `"No feedback yet"`;

exports[`createFeedbackWords() should create negative feedback words 1`] = `"😕 2 users consider this not useful"`;

exports[`createFeedbackWords() should create positive feedback words 1`] = `"👍 3 users consider this helpful"`;

exports[`createFlexMessageText should create a text for flex message 1`] = `"計程車上有裝悠遊卡感應器，老人悠悠卡可以享受優惠部分由政府補助，不影響司機收入，下車時使用老人悠遊卡，跳錶車資105元，優惠32元，只扣73元，哈哈，這是屬於我們的福利，與大家分享，可以善加利用！=7"`;

exports[`createFlexMessageText should handle the situation without input 1`] = `""`;

exports[`createHighlightContents should create a highlight flex message 1`] = `
Object {
  "contents": Array [
    Object {
      "color": "#ffb600",
      "text": "蜜蜂",
      "type": "span",
      "weight": "bold",
    },
    Object {
      "text": "逐漸死去",
      "type": "span",
    },
  ],
  "source": "text",
}
`;

exports[`createHighlightContents should create a highlight flex message 2`] = `
Object {
  "contents": Array [
    Object {
      "text": "全世界有",
      "type": "span",
    },
    Object {
      "color": "#ffb600",
      "text": "成千上萬",
      "type": "span",
      "weight": "bold",
    },
    Object {
      "color": "#ffb600",
      "text": "蜜蜂",
      "type": "span",
      "weight": "bold",
    },
  ],
  "source": "text",
}
`;

exports[`createHighlightContents should create a highlight flex message 3`] = `
Object {
  "contents": Array [
    Object {
      "text": "全",
      "type": "span",
    },
    Object {
      "color": "#ffb600",
      "text": "世界",
      "type": "span",
      "weight": "bold",
    },
    Object {
      "text": "有成千上萬",
      "type": "span",
    },
    Object {
      "color": "#ffb600",
      "text": "蜜蜂",
      "type": "span",
      "weight": "bold",
    },
    Object {
      "text": "逐漸死去",
      "type": "span",
    },
  ],
  "source": "text",
}
`;

exports[`createHighlightContents should create a highlight flex message 4`] = `
Object {
  "contents": Array [
    Object {
      "text": "全",
      "type": "span",
    },
    Object {
      "color": "#ffb600",
      "text": "世界",
      "type": "span",
      "weight": "bold",
    },
    Object {
      "text": "有成千上萬",
      "type": "span",
    },
    Object {
      "color": "#ffb600",
      "text": "蜜蜂",
      "type": "span",
      "weight": "bold",
    },
    Object {
      "text": "逐漸死去
",
      "type": "span",
    },
    Object {
      "color": "#ffb600",
      "text": "計程車",
      "type": "span",
      "weight": "bold",
    },
    Object {
      "text": "上有裝悠遊卡",
      "type": "span",
    },
    Object {
      "color": "#ffb600",
      "text": "感應器",
      "type": "span",
      "weight": "bold",
    },
    Object {
      "text": "
不影響",
      "type": "span",
    },
    Object {
      "color": "#ffb600",
      "text": "司機收入",
      "type": "span",
      "weight": "bold",
    },
    Object {
      "text": "，下車時使用老人悠遊卡",
      "type": "span",
    },
  ],
  "source": "hyperlinks",
}
`;

exports[`createHighlightContents should create a highlight flex message 5`] = `
Object {
  "contents": Array [
    Object {
      "color": "#ffb600",
      "text": "蜜蜂",
      "type": "span",
      "weight": "bold",
    },
    Object {
      "text": "逐漸死去
全",
      "type": "span",
    },
    Object {
      "color": "#ffb600",
      "text": "世界",
      "type": "span",
      "weight": "bold",
    },
    Object {
      "text": "有成千上萬",
      "type": "span",
    },
    Object {
      "color": "#ffb600",
      "text": "蜜蜂",
      "type": "span",
      "weight": "bold",
    },
  ],
  "source": "hyperlinks",
}
`;

exports[`createHighlightContents should handle line-bot#220 issue 1`] = `
Object {
  "contents": Array [
    Object {
      "text": "Original text",
      "type": "span",
    },
  ],
  "source": null,
}
`;

exports[`createHighlightContents should handle the situation without highlight 1`] = `
Object {
  "contents": Array [
    Object {
      "text": "Original text",
      "type": "span",
    },
  ],
  "source": null,
}
`;

exports[`createHighlightContents should handle the situation without input 1`] = `
Object {
  "contents": Array [
    Object {
      "text": "",
      "type": "span",
    },
  ],
  "source": null,
}
`;

exports[`createPostbackAction() should return postback message body 1`] = `
Object {
  "data": "{\\"input\\":3,\\"sessionId\\":1519019701265,\\"state\\":\\"some-id\\"}",
  "displayText": "I chose this",
  "label": "閱讀此回應",
  "type": "postback",
}
`;

exports[`createReferenceWords() should create reference for opinions 1`] = `
"replied at：Jan 9, 2018
different opinions：This is refering to different opinions"
`;

exports[`createReferenceWords() should create reference for rumors 1`] = `
"replied at：Jan 9, 2018
references：This is a reference"
`;

exports[`createReplyMessages() should return reply messages 1`] = `
Array [
  Object {
    "text": "💡 Someone on the internet replies to the message first reported on Jan 2, 2018:",
    "type": "text",
  },
  Object {
    "text": "基本上地瓜葉其實單吃就有效果，牛奶、豆漿可加可不加，民眾不用迷信。 三高或是糖尿病的患者還是要搭配醫生的治療，不能單靠吃地瓜葉就想將身體調養好，民眾千萬要注意。
另外地瓜葉內還有鉀和鈉，對於有痛風或是腎臟不好的民眾反而會造成負擔，因此並不建議食用。",
    "type": "text",
  },
  Object {
    "text": "replied at：Jan 9, 2018
references：http://www.mygopen.com/2017/06/blog-post_26.html
神奇的地瓜葉？搭配鮮奶遠離三高？謠言讓醫生說：有痛風或是腎臟不好的人要小心！",
    "type": "text",
  },
  Object {
    "text": "⬆️ Therefore, the author think the message contains misinformation.

💁 This content is provided by Cofact message reporting chatbot and crowd-sourced fact-checking community under CC BY-SA 4.0 license. Please refer to their references and make judgements on your own.


⁉️ If you have different thoughts, you may have your say here:
https://dev.cofacts.tw/article/2sn80q5l5mzi0",
    "type": "text",
  },
]
`;

exports[`ellipsis() should ellipsis when text is too long 1`] = `"123⋯⋯"`;

exports[`ellipsis() should properly cut emojis 1`] = `"🏳️‍🌈🏳️‍🌈🏳️‍🌈⋯⋯"`;

